# bobf

./: .gitignore  .python-version  README.md  bot.py  botitron.py  game_client.py  gamestate_response_sample.json  register.http  requirements.txt
basic_bot/: main.py
bobf/: .env  pyproject.toml
bobf/bobf/: bot.py  botitron.py  game_client.py  hooverbot.py  jasonbot.py  pathfinder.py  simplebot.py
bobf/tests/: pathfinging_test.py
samples/: register_response_sample.json  register_response_sample_oulu.json  register_response_sample_tampere.json  register_response_sample_turku.json
scripts/: bobf-changemap.sh  bobf-run-all-bots.sh  bobf-run-server.sh  bobf-run-simple-bot.sh
