[tool.poetry]
name = "bobf"
version = "0.1.0"
description = "Bots of Black Friday"
authors = ["Arto Santala <crystoll@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
python-dotenv = "^0.21.1"
autopep8 = "^2.0.1"
pytest = "^7.2.1"
numpy = "^1.24.2"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
